[gd_scene load_steps=18 format=2]

[ext_resource path="res://Common/Themes/ClassicTheme.tres" type="Theme" id=1]
[ext_resource path="res://Common/Fonts/futurespore.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/UILayer.gd" type="Script" id=3]
[ext_resource path="res://UI/ShaderOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Common/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://Common/Fonts/m6x11.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/ShipInfoUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/sounds/retrobeeps/terminal_01.ogg" type="AudioStream" id=8]
[ext_resource path="res://Common/AudioStreamPlayerFolder.gd" type="Script" id=9]
[ext_resource path="res://Music/Ambient/sfx_19a.ogg" type="AudioStream" id=10]
[ext_resource path="res://UI/AudioSlider.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Options.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "ui_start"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenuUI/TitleLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenuUI/HBoxContainer/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "vanish"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenuUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 6 )

[node name="UILayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="MainMenuUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="TitleLabel" type="Label" parent="MainMenuUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -221.5
margin_right = 221.5
margin_bottom = 65.0
mouse_filter = 1
theme = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.352941, 0.0862745, 0.0862745, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 1
text = "Ursa Major"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuUI"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.5
margin_right = 93.5
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuUI/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 29.0
margin_right = 157.0
margin_bottom = 720.0
theme = ExtResource( 1 )
alignment = 1

[node name="StartButton" type="Button" parent="MainMenuUI/HBoxContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 128.0
margin_bottom = 312.0
mouse_filter = 1
disabled = true
text = "Start"
flat = true

[node name="BossesButton" type="Button" parent="MainMenuUI/HBoxContainer/VBoxContainer"]
margin_top = 316.0
margin_right = 128.0
margin_bottom = 358.0
mouse_filter = 1
disabled = true
text = "Bosses"
flat = true

[node name="OptionsButton" type="Button" parent="MainMenuUI/HBoxContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 128.0
margin_bottom = 404.0
mouse_filter = 1
disabled = true
text = "Options"
flat = true

[node name="QuitButton" type="Button" parent="MainMenuUI/HBoxContainer/VBoxContainer"]
margin_top = 408.0
margin_right = 128.0
margin_bottom = 450.0
mouse_filter = 1
text = "Quit"
flat = true

[node name="VersionLabel" type="Label" parent="MainMenuUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -41.0
margin_right = 264.0
mouse_filter = 1
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Version : 0.1"
valign = 2

[node name="ShaderOverlay" parent="MainMenuUI" instance=ExtResource( 4 )]
margin_left = 511.0
margin_top = 216.0
margin_right = 774.0
margin_bottom = 501.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/ui_start = SubResource( 3 )
anims/vanish = SubResource( 4 )

[node name="ShipInfoUI" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )

[node name="TerminalSoundsPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
script = ExtResource( 9 )
Folder = "res://UI/sounds/retrobeeps"

[node name="AmbientPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Options" type="Control" parent="."]
visible = false
margin_left = 172.0
margin_top = 219.0
margin_right = 371.0
margin_bottom = 496.0
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FullscreenButton" type="CheckButton" parent="Options/VBoxContainer"]
margin_right = 199.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 5 )
text = "Fullscreen"

[node name="MusicButton" type="CheckButton" parent="Options/VBoxContainer"]
margin_top = 66.0
margin_right = 199.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "Music"

[node name="SoundVBox" type="VBoxContainer" parent="Options"]
margin_left = 743.0
margin_top = -4.0
margin_right = 937.0
margin_bottom = 282.0
theme = ExtResource( 1 )

[node name="General" parent="Options/SoundVBox" instance=ExtResource( 11 )]
margin_bottom = 29.0
Title = "General"

[node name="Ambient" parent="Options/SoundVBox" instance=ExtResource( 11 )]
margin_top = 33.0
margin_bottom = 62.0
Title = "Ambient"

[node name="Explosions" parent="Options/SoundVBox" instance=ExtResource( 11 )]
margin_top = 66.0
margin_bottom = 95.0
Title = "Explosions"

[connection signal="start_game" from="." to="." method="_on_UILayer_start_game"]
[connection signal="pressed" from="MainMenuUI/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenuUI/HBoxContainer/VBoxContainer/BossesButton" to="." method="_on_BossesButton_pressed"]
[connection signal="pressed" from="MainMenuUI/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenuUI/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="Options/VBoxContainer/FullscreenButton" to="Options" method="_on_FullscreenButton_toggled"]
